--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <div class="wrapper">
-      <span>Emily Parker</span>
+      <span class="name">Emily Parker</span>
       
       <nav>
         <ul>
